WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100343
AX: file upload input cannot be activated with VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=100343
Summary
AX: file upload input cannot be activated with VoiceOver
chris fleizach
Reported
2012-10-25 00:23:06 PDT
AXPress as an action does not activate file upload input controls
Attachments
patch
(6.07 KB, patch)
2012-10-25 22:21 PDT
,
chris fleizach
sam
: review-
Details
Formatted Diff
Diff
patch
(4.27 KB, patch)
2012-11-15 17:51 PST
,
chris fleizach
sam
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2012-10-25 00:23:17 PDT
rdar://11400485
chris fleizach
Comment 2
2012-10-25 22:21:16 PDT
Created
attachment 170812
[details]
patch
Sam Weinig
Comment 3
2012-11-13 13:02:48 PST
Comment on
attachment 170812
[details]
patch I don't think this is the right approach. Instead, we note that we are processing a user event when we enter the part of the accessibility code that will fire the click. That could either be in [WebAccessibilityObjectWrapper accessibilityPerformPressAction] or maybe AccessibilityObject::press() and the derived versions. You can use the UserGestureIndicator class to set the state.
chris fleizach
Comment 4
2012-11-15 17:51:21 PST
Created
attachment 174576
[details]
patch
chris fleizach
Comment 5
2012-11-15 17:52:10 PST
Sam, could you take another look. Thanks
Build Bot
Comment 6
2012-11-16 16:45:42 PST
Comment on
attachment 174576
[details]
patch
Attachment 174576
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/14859547
New failing tests: inspector-protocol/nmi-webaudio.html
Sam Weinig
Comment 7
2012-11-19 17:54:30 PST
Thanks for tackling this Chris.
chris fleizach
Comment 8
2012-11-25 22:08:44 PST
http://trac.webkit.org/changeset/135680
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug