AX: file upload input cannot be activated with VoiceOver https://bugs.webkit.org/show_bug.cgi?id=100343

Reviewed by Sam Weinig.

Source/WebCore:

Simulated events were not allowed to be processed in the file input type in the DOMActivate handler.
This was a problem for accessibility clients which rely on simulated events.

The solution is to mark the UserGestureIndicator as definitely processing an event.

Test: accessibility/file-upload-button-with-axpress.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::press):

LayoutTests:

* accessibility/file-upload-button-with-axpress-expected.txt: Added.
* accessibility/file-upload-button-with-axpress.html: Added.



Canonical link: https://commits.webkit.org/121340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135680 268f45cc-cd09-0410-ab3c-d52691b4dbfc